fix select arrow z-index

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -437,6 +437,7 @@ select { /* https://stackoverflow.com/questions/3532649/problem-with-select-and-
 .select label {
     position: relative;
     display: inline-block;
+    z-index: 0;
 }
 
 .select label:after {
